# Wallet-E-mail-box-Dojo

./: .env-example  .env.example  .eslintrc.json  .gitignore  API.md  ARCHITECTURE.md  ASSETS-LICENSE  CONTRACTS-LICENSE  CONTRIBUTING.md  DEPLOYMENT-en.md  DEPLOYMENT.md  DEVELOPMENT-en.md  DEVELOPMENT.md  DOCS-LICENSE  LICENSE  MONITORING-en.md  MONITORING.md  README-en.md  README.md  SECURITY.md  TESTING.md  TESTS-LICENSE  TROUBLESHOOTING-en.md  TROUBLESHOOTING.md  content.js  git_status.txt  hardhat.config.cjs  hardhat.config.js  index.html  jest.config.js  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.jest.json  tsconfig.json  vercel.json  vite.config.ts
assets/: index-D7f-cnj5.js  index-D7f-cnj5.js.map
contracts/: EmailContract.sol
contracts/email-contract/: Cargo.toml  README.md  lib.rs
src/: App.tsx
src/components/: EmailForm.tsx  EmailItem.tsx  EmailList.tsx  EmailSystem.tsx  EmailTabs.tsx  Loader.tsx  SeedPhraseModal.tsx  Toast.tsx  Wallet.tsx
src/services/: emailService.ts  walletService.ts
src/styles/: index.css  multiversx.css
src/theme/: chakraTheme.ts
src/types/: email.d.ts  multiversx.d.ts
