[package]
name = "email-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ink = { version = "4.0.0", default-features = false }
ink_env = { version = "4.0.0", default-features = false }
ink_storage = { version = "4.0.0", default-features = false }
ink_lang = { version = "4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.3", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std"
] 